user panel: editing use cases
